--- a/rockchip/ebook/init.rc
+++ b/rockchip/ebook/init.rc
@@ -13,6 +13,7 @@ loglevel 3
     export ANDROID_ASSETS /system/app
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /mnt/sdcard
+    export EXTERNAL_STORAGE_SD /mnt/sdcard/extsd
     export ASEC_MOUNTPOINT /mnt/asec
     export BOOTCLASSPATH /system/framework/core.jar:/system/framework/ext.jar:/system/framework/framework.jar:/system/framework/android.policy.jar:/system/framework/services.jar
 
@@ -23,7 +24,8 @@ loglevel 3
 # create mountpoints
     mkdir /mnt 0775 root system
     mkdir /mnt/sdcard 0000 system system
-    mkdir /mnt/flash 0000 system system
+    mkdir /mnt/sdcard/extsd 0000 system system
+
 
 # Create cgroup mount point for cpu accounting
     mkdir /acct
@@ -32,11 +34,10 @@ loglevel 3
 
 # Backwards Compat - XXX: Going away in G*
     symlink /mnt/sdcard /sdcard
-    symlink /mnt/flash /flash
+    symlink /mnt/sdcard/extsd /extsd
 
 
 ##add by cjf
-    mkdir /flash 0777 system system
 
     mkdir /system
     mkdir /data 0771 system system
