RK device modify for storage and brightness

--- a/rockchip/ebook/init.rc
+++ b/rockchip/ebook/init.rc
@@ -24,7 +24,6 @@ loglevel 3
 # create mountpoints
     mkdir /mnt 0775 root system
     mkdir /mnt/sdcard 0000 system system
-    mkdir /mnt/sdcard/extsd 0000 system system
 
 
 # Create cgroup mount point for cpu accounting
@@ -253,6 +252,7 @@ on boot
     chown system system /sys/class/leds/red/brightness
     chown system system /sys/class/leds/green/brightness
     chown system system /sys/class/leds/blue/brightness
+    chown system system /sys/class/backlight/rk28_bl/brightness
     chown system system /sys/class/leds/red/device/grpfreq
     chown system system /sys/class/leds/red/device/grppwm
     chown system system /sys/class/leds/red/device/blink
